# cpac-log-muncher

./: .pre-commit-config.yaml  README.md  clmunch.html  index.html  pyproject.toml  search.js
.github/workflows/: test.yaml
clmunch/: algorithms.html  clmunch.html  utils.html
src/clmunch/: clmunch.py  utils.py
tests/: test_dummy.py  test_fibonacci.py
